Implement getUserRideHistory()